<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_copy"
        android:orderInCategory="100"
        android:title="@string/context_copy" />
    <item
        android:id="@+id/context_paste"
        android:orderInCategory="100"
        android:title="@string/context_paste" />
    <item
        android:id="@+id/context_off"
        android:orderInCategory="100"
        android:title="@string/context_off" />
    <item
        android:id="@+id/context_white"
        android:orderInCategory="100"
        android:title="@string/context_white" />
    <item
        android:id="@+id/context_fire"
        android:icon="@drawable/ic_fire"
        android:orderInCategory="100"
        android:title="@string/context_fire" />
    <item
        android:id="@+id/context_red"
        android:orderInCategory="100"
        android:title="@string/context_red" />
    <item
        android:id="@+id/context_blue"
        android:orderInCategory="100"
        android:title="@string/context_blue" />
    <item
        android:id="@+id/context_green"
        android:orderInCategory="100"
        android:title="@string/context_green" />



</menu>